[package]
name = "vincent_blur"
license = "MIT OR Apache-2.0"
description = "My own implementaion of guassian blur using threads"
version = "0.1.2"
edition = "2021"
authors = "mingli202"
repository = "https://github.com/mingli202/blur"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grid = "0.14.0"
image = "0.25.2"
